[package]
name = "endpoint-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
rayon = "1.6.0"
threadpool = "1.8.1"
anyhow = "1.0.66"
serde = { version = "1.0.100", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "rustls-tls"]}
trust-dns-resolver = "0.22.0"